--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL=https://localhost:7055
+REACT_APP_CLIENT_ID=300670081136-s4odib4fkl7sbij42q5gl3nkfd08rmuf.apps.googleusercontent.com
